[package]
name = "pmd_sir0"
version = "1.1.1"
authors = ["marius851000 <mariusdavid@laposte.net>"]
edition = "2018"
description = "A library that can read sir0 file, used in pokemon mystery dungeon game"
repository = "https://github.com/marius851000/pmd_sir0"
keywords = [ "parser" ]
categories = [ "parser-implementations" ]
license = "CC0-1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io_partition = "1.0.0"
byteorder = "1.4.2"
thiserror = "1.0.23"